# carth

./: .build.yml  .gitignore  .gitlab-ci.yml  .hlint.yaml  .stan.toml  CHANGELOG.org  CONTRIBUTING.org  Dockerfile  LICENSE-ACSL  Makefile  README.md  README.org  REFERENCE.org  TODO.org  brittany.yaml  build-upload-docker.sh  carth.cabal  compile.sh  copy-to-jo-zone.sh  guix.scm  package.yaml  page.org  profile-debug.sh  profile-release.sh  profile.sh  run-tests.sh  stack.yaml
app/: Config.hs  GetConfig.hs  Main.hs  Prebaked.hs
examples/: count-lines.carth  err.carth  fizzbuzz.carth  gemini.carth  hello-world.carth  list-monad.carth  literate.org  read-self.carth  sicp.carth  sieve.carth  std.carth  test.carth
foreign-core/: Cargo.toml
foreign-core/src/: ffi.rs  lib.rs
lib/: lib.c
selfhost/: main.carth  selfhost-cache.carth  selfhost-check.carth  selfhost-misc.carth  selfhost-parse.carth  selfhost-resolve.carth  test.sh
selfhost/test-pgm/: main.carth
selfhost/test-pgm/lib/: bar.carth  foo.carth
src/: Abi.hs  Annot.hs  AnnotAst.hs  Ast.hs  Builtin.hs  Check.hs  Checked.hs  Codegen.hs  Compile.hs  CompiletimeEnv.hs  CompiletimeVars.hs  Conf.hs  Config.hs  Desugar.hs  DesugaredAst.hs  EnvVars.hs  Err.hs  Extern.hs  FreeVars.hs  Gen.hs  Infer.hs  Inferred.hs  Interp.hs  LLCompunit.hs  LLSubprog.hs  Lex.hs  Lexd.hs  Lib.hs  Literate.hs  Low.hs  Lower.hs  Macro.hs  Match.hs  Misc.hs  Mono.hs  MonoAst.hs  Monomorphic.hs  Monomorphize.hs  NonEmpty.hs  Optimize.hs  (+14 more)
src/Back/: Codegen.hs  Compile.hs  CompileC.hs  CompileLLVM.hs  Extern.hs  Gen.hs  Link.hs  Low.hs  Lower.hs  Selections.hs
src/Front/: Check.hs  Checked.hs  Err.hs  Infer.hs  Inferred.hs  Lex.hs  Lexd.hs  Literate.hs  Macro.hs  Match.hs  Monomorphic.hs  Monomorphize.hs  Parse.hs  Parsed.hs  Parser.hs  SrcPos.hs  Subst.hs  TypeAst.hs
std/: array.carth  either.carth  io.carth  iter.carth  lazy.carth  list.carth  macros.carth  map.carth  math.carth  maybe.carth  mem.carth  memo.carth  net.carth  nonstrict.carth  parse.carth  priority-queue.carth  queue.carth  set.carth  std.carth  string.carth  sync.carth
std-rs/: Cargo.toml
std-rs/src/: io.rs  lib.rs  net.rs
test/: Arbitrary.hs  CheckSpec.hs  LowPgms.hs  ParseSpec.hs  SystemSpec.hs
test/bench/: big-nested-struct-on-heap.carth
test/tests/bad/: cast-mono.carth  cast-poly.carth  cast-poly2.carth  conflicting-ctor-def_0.carth  conflicting-ctor-def_1.carth  conflicting-pat-var-defs.carth  conflicting-type-def.carth  conflicting-var-def_0.carth  conflicting-var-def_1.carth  ctor-arity-mismatch.carth  data-direct-recursion-loop-bug.carth  extern-not-monomorphic.carth  found-hole.carth  free-vars-in-alias.carth  free-vars-in-data.carth  inexhaustive-pats.carth  inf-type.carth  invalid-user-type-sig.carth  main-not-defined.carth  num.carth  rec-type-def.carth  recursive-var-def.carth  redundant-case.carth  transmute-size-mismatch.carth  transmute-size-mismatch2.carth  type-inst-arity-mismatch.carth  unbound-tvar.carth  undef-ctor.carth  undef-type_0.carth  undef-type_1.carth  undef-type_2.carth  undef-var.carth  unification-failed.carth  wrong-main-type.carth
test/tests/good/: COMMIT_44eff82c6474.carth  COMMIT_TMP.carth  ackermann.carth  alias.carth  cast-poly.carth  cast.carth  factorial.carth  fibonacci.carth  fold-big-acc.carth  free-vars_0.carth  function-sig-class.carth  functional.carth  hello-world.carth  match-str.carth  minimal.carth  partition.carth  sieve-of-eratosthenes.carth  transmute-mono.carth  transmute-poly.carth  unbound-tvar.carth
