cabal-version: 2.2

name:           carth
version:        0.0.4.0
description:    Please see the README on Sourcehut at <https://sr.ht/~jojo/Carth>
homepage:       https://carth.pink
author:         Johan Johansson
maintainer:     jo@jo.zone
copyright:      2020 Johan Johansson
license:        AGPL-3.0-or-later
license-file:   LICENSE-AGPLv3
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.org

source-repository head
  type: git
  location: https://github.com/bryal/carth

library
  exposed-modules:
      Conf
      EnvVars
      FreeVars
      Misc
      Pretty
      Sizeof

      Front.SrcPos
      Front.Subst
      Front.Err
      Front.TypeAst
      Front.Lex
      Front.Lexd
      Front.Macro
      Front.Parse
      Front.Parser
      Front.Parsed
      Front.Check
      Front.Checked
      Front.Infer
      Front.Inferred
      Front.Literate
      Front.Match
      Front.Monomorphic
      Front.Monomorphize

      Back.Lower
      Back.Low
      Back.Codegen
      Back.Compile
  other-modules:
  hs-source-dirs:
      src
  ghc-options: -Weverything -Werror -Wno-safe -Wno-unsafe -Wno-missing-import-lists -Wno-missing-exported-signatures -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude -Wno-name-shadowing -Wno-orphans -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unticked-promoted-constructors -Wno-missing-deriving-strategies -Wno-missing-export-lists -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-compat-unqualified-imports -Wno-deprecations -Wno-partial-fields
  build-depends:
      base
    , bytestring
    , containers
    , directory
    , exceptions
    , filepath
    , llvm-hs
    , llvm-hs-pure
    , llvm-hs-pretty
    , megaparsec
    , microlens-platform
    , mtl
    , parser-combinators
    , prettyprinter
    , process
    , utf8-string
    , vector
  default-extensions:
      LambdaCase
    , TupleSections
    , FlexibleContexts
    , FlexibleInstances
    , OverloadedStrings
    , MultiParamTypeClasses
    , TypeSynonymInstances
    , KindSignatures
    , GeneralizedNewtypeDeriving
    , TypeFamilies
    , TypeApplications
    , MultiWayIf
  default-language: Haskell2010

executable carth
  main-is: Main.hs
  other-modules:
      GetConfig
      Prebaked
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Weverything -Werror -Wno-safe -Wno-unsafe -Wno-missing-import-lists -Wno-missing-exported-signatures -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude -Wno-name-shadowing -Wno-orphans -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unticked-promoted-constructors -Wno-missing-deriving-strategies -Wno-missing-export-lists -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-compat-unqualified-imports -Wno-partial-fields
  build-depends:
      base
    , carth
    , filepath
    , megaparsec
    , mtl
    , template-haskell
  default-extensions:
      LambdaCase
    , TupleSections
    , FlexibleContexts
    , FlexibleInstances
    , OverloadedStrings
    , MultiParamTypeClasses
    , TypeSynonymInstances
    , KindSignatures
    , GeneralizedNewtypeDeriving
    , TypeFamilies
    , TypeApplications
  default-language: Haskell2010

test-suite carth-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      SystemSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Weverything -Werror -Wno-safe -Wno-unsafe -Wno-missing-import-lists -Wno-missing-exported-signatures -Wno-missing-local-signatures -Wno-monomorphism-restriction -Wno-implicit-prelude -Wno-name-shadowing -Wno-orphans -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unticked-promoted-constructors -Wno-missing-deriving-strategies -Wno-missing-export-lists -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-compat-unqualified-imports -Wno-partial-fields
  build-depends:
      base
    , carth
    , directory
    , filepath
    , mtl
    , hspec
    , silently
  default-extensions:
      LambdaCase
    , TupleSections
    , FlexibleContexts
    , FlexibleInstances
    , OverloadedStrings
    , MultiParamTypeClasses
    , TypeSynonymInstances
    , KindSignatures
    , GeneralizedNewtypeDeriving
    , TypeFamilies
    , TypeApplications
  default-language: Haskell2010
