[package]
name = "carth-std-rs"
version = "0.3.1"
authors = ["JoJo <jo@jo.zone>"]
edition = "2018"
description = "The foreign part of Carths core"
homepage = "https://carth.pink"
repository = "https://gitlab.com/JoJoZ/carth"
license = "AGPL-3.0-or-later"

[dependencies]
libc = "0.2"
rustls = { version = "0.18", features = ["dangerous_configuration"] }
webpki = "0.21"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
